--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "parse-server-sendmail-template-adapter",
-    "version": "1.0",
+    "version": "1.0.0",
     "description": "Used to send Parse Server emails though sendmail using HTML templates",
     "main": "index.js",
     "scripts":
     {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "mocha test/test.js"
     },
     "repository":
     {
@@ -29,6 +29,8 @@
     "homepage": "https://github.com/Kautenja/parse-server-sendmail-template-adapter#readme",
     "dependencies":
     {
-        "sendmail": "^0.2.2"
+        "sendmail": "^0.2.2",
+        "mocha": "*",
+        "chai": "*"
     }
 }
