--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts":
     {
-        "test": "mocha test/test.js"
+        "test": "mocha test/test.js",
+        "lint": "plato -d static_analysis * test/*"
     },
     "repository":
     {
@@ -40,6 +41,8 @@
     "devDependencies":
     {
         "mocha": "*",
-        "chai": "*"
+        "chai": "*",
+        "plato": "*",
+        "jsdoc": "*"
     }
 }
